--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ header{
     display: none;
 }
 .btn{
+    
     padding: 8px 22px;
     background: var(--main-color);
     color: var(--bg-color);
@@ -101,7 +102,7 @@ header{
 /* Inicio do home */
 .home{
     margin-top: 5rem;
-    background: url(img/home.png);
+    background: url(img/casah.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -119,7 +120,7 @@ header{
     margin-bottom: 1rem;
 }
 .anucio{
-    display: grid;
+    display:flex;
     grid-template-columns: repeat(auto-fit, minmax(18rem, auto));
     gap: 2rem
 }
@@ -129,7 +130,7 @@ header{
 .anucio-text span{
     font-size: 1rem;
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight:500;
     color: var(--main-color);
 }
 .sales{
@@ -166,7 +167,6 @@ header{
 .heading{
     text-align: center;
     margin-bottom: 2rem ;
-    border: 1px solid red;
 }
 .heading span{
     font-weight: 500;
@@ -185,7 +185,6 @@ header{
     
 }
 .properties-container{
-    border: 1px solid red;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(240px, auto));
    gap: 3rem;
@@ -239,7 +238,6 @@ transition: 0.5s;
     margin-left: 4px;
 }
 .newsletter {
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -274,8 +272,7 @@ transition: 0.5s;
 .footer {
     background: var(--main-color);
     color: var(--bg-color);
-    border-radius: 5rem 0 0 0;
-    border: 1px solid red;
+    border-radius: 1rem 1rem 0 0;
 }
 .footer-container{
     display: grid;
@@ -283,6 +280,7 @@ transition: 0.5s;
     gap: 2rem;
 }
 .footer-container h2{
+    margin-left: 15px;
     font-size: 1.7rem;
     font-weight: 500;
 }
@@ -292,7 +290,7 @@ transition: 0.5s;
 }
 .footer-box h3{
     margin-bottom: 1rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 .footer-box a {
